<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.ExtraFragment">

    <androidx.core.widget.NestedScrollView
        custom:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical">

        <LinearLayout
            custom:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                custom:cardElevation="10.0dip"
                custom:cardPreventCornerOverlap="false"
                custom:elevation="8.0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16.0dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16.0dip"
                        android:text="@string/apostle_creed_fante"
                        android:textColor="@color/hymn_text"
                        android:textSize="22.0sp"
                        android:fontFamily="@font/bariol_bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/acf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="5.0dip"
                        android:text="@string/apostle_fante"
                        android:fontFamily="@font/hb"
                        android:textColor="@color/blackish" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                custom:cardElevation="10.0dip"
                custom:cardPreventCornerOverlap="false"
                custom:elevation="8.0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16.0dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16.0dip"
                        android:text="@string/apostle_creed"
                        android:textColor="@color/hymn_text"
                        android:textSize="22.0sp"
                        android:fontFamily="@font/bariol_bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ac"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="5.0dip"
                        android:text="@string/apostle"
                        android:fontFamily="@font/hb"
                        android:textColor="@color/blackish" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                custom:cardElevation="10.0dip"
                custom:cardPreventCornerOverlap="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16.0dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="16.0dip"
                        android:text="@string/the_nicen_creed"
                        android:textColor="@color/hymn_text"
                        android:textSize="22.0sp"
                        android:fontFamily="@font/bariol_bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5.0dip"
                        android:text="@string/nicen"
                        android:fontFamily="@font/hb"
                        android:textColor="@color/blackish" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                custom:cardElevation="10.0dip"
                custom:cardPreventCornerOverlap="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16.0dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16.0dip"
                        android:text="@string/youth_pledge"
                        android:textColor="@color/hymn_text"
                        android:textSize="22.0sp"
                        android:fontFamily="@font/bariol_bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pledge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="5.0dip"
                        android:text="@string/ypledge"
                        android:fontFamily="@font/hb"
                        android:textColor="@color/blackish" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                custom:cardElevation="10.0dip"
                custom:cardPreventCornerOverlap="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16.0dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16.0dip"
                        android:text="@string/youth_anthem"
                        android:textColor="@color/hymn_text"
                        android:textSize="22.0sp"
                        android:fontFamily="@font/bariol_bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/anthem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="5.0dip"
                        android:text=""
                        android:fontFamily="@font/hb"
                        android:textColor="@color/blackish" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>